--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ pandas
 jsonlines
 promptflow.evals
 openpyxl
-openai<=1.44.1 # https://github.com/microsoft/promptflow/issues/3751
+openai
 azure.mgmt.authorization==4.0.0
