--- a/.github/actions/config-env/action.yml
+++ b/.github/actions/config-env/action.yml
@@ -149,7 +149,7 @@ runs:
           set -e
           if [ $exit_code -ne 0 ]; then
             echo "🔶 | No previous deployment exists or failed."
-            deployment_exists=false
+            deployment_exists=true
           else
             echo "🔶 | Previous deployment exists." 
             deployment_exists=true
@@ -175,13 +175,13 @@ runs:
           # This situation occurs if you made a deployment and then deleted the resource group.
           # Resource group may also be empty because previous deployment finished with failure.
           # In both cases we recreate resources
-          # if [ "$deployment_exists" = true ] && [ "$resource_group_exist" = false ]; then
-          #   echo "❌ | Deployment exists but resource group $AZURE_RESOURCE_GROUP doesn't."
-          #   exit 1
-          #   # azd down --force --purge
-          #   # rm -rf .azure
-          #   # azd init -e ${{ inputs.AZURE_ENV_NAME }} -l $AZURE_LOCATION -s $AZURE_SUBSCRIPTION_ID
-          # fi           
+          if [ "$deployment_exists" = true ] && [ "$resource_group_exist" = false ]; then
+            echo "❌ | Deployment exists but resource group $AZURE_RESOURCE_GROUP doesn't."
+            exit 1
+            # azd down --force --purge
+            # rm -rf .azure
+            # azd init -e ${{ inputs.AZURE_ENV_NAME }} -l $AZURE_LOCATION -s $AZURE_SUBSCRIPTION_ID
+          fi           
 
           # Set environment variables by getting them from the GitHub environment or the last deployment. 
           # GitHub environment variables take precedence over those from the last deployment.
