--- a/.github/actions/config-env/action.yml
+++ b/.github/actions/config-env/action.yml
@@ -149,7 +149,7 @@ runs:
           set -e
           if [ $exit_code -ne 0 ]; then
             echo "🔶 | No previous deployment exists or failed."
-            deployment_exists=true
+            deployment_exists=false
           else
             echo "🔶 | Previous deployment exists." 
             deployment_exists=true
@@ -165,7 +165,7 @@ runs:
           # Checking if the resource group exists
           export AZURE_RESOURCE_GROUP=$(azd env get-values -e ${{ inputs.AZURE_ENV_NAME }} | grep AZURE_RESOURCE_GROUP | cut -d'=' -f2 | tr -d '"' || true)
           if [ -z "$AZURE_RESOURCE_GROUP" ]; then
-            resource_group_exist=false
+            resource_group_exist=true
           else
             resource_group_exist=$(az group exists --name "$AZURE_RESOURCE_GROUP")  
           fi        
